Fix memory leak in DecodingImageGenerator

Bug: 897190
Change-Id: I1c2d24bc3db26d5c27a582a6fd5049a16cabd927
Reviewed-on: https://chromium-review.googlesource.com/c/1291769
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Mohammad Reza Zakerinasab <zakerinasab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601636}
Former-commit-id: 907a940f0ce03a540748aad03524954567026c67